feat: provide business get host count and business get inst topo interface.
